@@ -1,3 +1,8 @@
+2004-07-03  Nicel KM  <mnicel@novell.com>
+
+	* calendar/e-cal-backend-exchange-calendar.c (modify_object):
+	Killed some type mismatch warnings.
+
 2004-06-29  Sushma Rai  <rsushma@novell.com>
 
 	* storage/exchange-hierarchy-webdav.c (xfer_folder): Finding the
